# LanchainBuild

./: README.md  main.py  pyproject.toml
src/MultiAgent/: Direcotry.py
src/agent/: agent_practice.ipynb
src/chain/: chain_practice.ipynb
src/langgraph/: langgraph_practice.ipynb
src/lcel/: lcel_practice.ipynb
src/llm/: llm_factory.py
src/memory/: memory_practice.ipynb
src/prompts/: embed_practice.ipynb  file_loader_practive.ipynb  parse_out_practice.ipynb  prompt_practice.ipynb  simple_prompt.json  simple_prompt.yaml
