[project]
name = "lanchainbuild"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "jinja2>=3.1.6",
    "jupyter>=1.1.1",
    "jupyterlab>=4.4.4",
    "langchain>=0.3.26",
    "langchain-community>=0.3.27",
    "langchain-openai>=0.3.27",
    "pdfminer-six>=20250506",
    "python-dotenv>=1.1.1",
    "sentence-transformers>=5.0.0",
    "unstructured[xlsx]>=0.18.5",
]

[tool.uv.pip]
index-url = "https://pypi.tuna.tsinghua.edu.cn/simple"

[[tool.uv.index]]
url = "https://pypi.tuna.tsinghua.edu.cn/simple"
default = true
